--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,7 +30,7 @@ jobs:
             
     - name: Push Docker Image
       run: |
-        docker push iseco/docker-graphql:0.0.2 .
+        docker push iseco/docker-graphql:0.0.2
         
 #     - name: Build the Docker image
 #       run: docker build . --file Dockerfile --tag iseco/docker-graphql:$(date +%s)
